--- a/TrailMix/New.storyboard
+++ b/TrailMix/New.storyboard
@@ -26,9 +26,11 @@
                                 <rect key="frame" x="150" y="300" width="300" height="292"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="2PR-Lf-unT"/>
                                     <constraint firstAttribute="height" constant="292" id="BMh-XJ-LOr"/>
                                     <constraint firstAttribute="width" constant="300" id="Dof-cX-dH8"/>
                                     <constraint firstAttribute="width" constant="300" id="RFT-c7-7gm"/>
+                                    <constraint firstAttribute="height" constant="292" id="X4f-MA-8S2"/>
                                     <constraint firstAttribute="height" constant="292" id="bMU-i6-7tC"/>
                                     <constraint firstAttribute="width" constant="300" id="z9x-of-CG7"/>
                                 </constraints>
@@ -51,6 +53,8 @@
                                 </prototypes>
                                 <variation key="default">
                                     <mask key="constraints">
+                                        <exclude reference="BMh-XJ-LOr"/>
+                                        <exclude reference="Dof-cX-dH8"/>
                                         <exclude reference="RFT-c7-7gm"/>
                                         <exclude reference="bMU-i6-7tC"/>
                                         <exclude reference="z9x-of-CG7"/>
@@ -157,10 +161,6 @@
                                     <action selector="dollarButtontapped:" destination="IiV-kw-1Cq" eventType="touchUpInside" id="keO-Uw-Awg"/>
                                 </connections>
                             </button>
-                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="4VM-lB-l0S">
-                                <rect key="frame" x="150" y="256" width="300" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lX6-Gd-npD">
                                 <rect key="frame" x="512" y="67" width="72" height="30"/>
                                 <constraints>
@@ -202,7 +202,6 @@
                             <constraint firstItem="034-NV-S3O" firstAttribute="centerY" secondItem="0cc-MI-MpS" secondAttribute="centerY" constant="52" id="1mO-sK-sFc"/>
                             <constraint firstItem="XBx-q6-4oM" firstAttribute="leading" secondItem="1Iw-AX-FSm" secondAttribute="trailing" constant="18" id="2YB-lg-6MV"/>
                             <constraint firstItem="Sim-th-EWD" firstAttribute="top" secondItem="5VJ-ze-pTE" secondAttribute="bottom" constant="8" id="3ZE-5c-IWw"/>
-                            <constraint firstAttribute="centerX" secondItem="4VM-lB-l0S" secondAttribute="centerX" id="3v3-N2-79X"/>
                             <constraint firstItem="jM3-eA-ISG" firstAttribute="centerY" secondItem="XBx-q6-4oM" secondAttribute="centerY" constant="-0.5" id="4fm-Gd-R10"/>
                             <constraint firstItem="tjp-qH-Pfe" firstAttribute="centerX" secondItem="5VJ-ze-pTE" secondAttribute="centerX" id="59P-gL-USq"/>
                             <constraint firstItem="xRy-Ea-Y8C" firstAttribute="centerY" secondItem="lX6-Gd-npD" secondAttribute="centerY" id="75e-Y0-VxL"/>
@@ -211,8 +210,8 @@
                             <constraint firstItem="F3J-og-PZb" firstAttribute="leading" secondItem="0eJ-UL-Xer" secondAttribute="trailing" constant="25" id="BGd-XX-Dip"/>
                             <constraint firstItem="034-NV-S3O" firstAttribute="top" secondItem="0cc-MI-MpS" secondAttribute="bottom" constant="22" id="Ckh-nN-mbW"/>
                             <constraint firstAttribute="centerY" secondItem="Ltt-4s-bbP" secondAttribute="centerY" constant="248" id="E9f-k8-g7o"/>
-                            <constraint firstItem="4VM-lB-l0S" firstAttribute="width" secondItem="5VJ-ze-pTE" secondAttribute="width" id="ETE-8I-8i1"/>
                             <constraint firstItem="034-NV-S3O" firstAttribute="centerX" secondItem="0cc-MI-MpS" secondAttribute="centerX" id="GZr-fO-cR9"/>
+                            <constraint firstItem="5VJ-ze-pTE" firstAttribute="top" secondItem="0eJ-UL-Xer" secondAttribute="bottom" constant="72" id="JsY-6z-2sK"/>
                             <constraint firstAttribute="trailing" secondItem="HT6-PK-YfT" secondAttribute="trailing" id="Oee-WB-JYO"/>
                             <constraint firstItem="xRy-Ea-Y8C" firstAttribute="centerY" secondItem="lX6-Gd-npD" secondAttribute="centerY" id="RxT-Ta-CKw"/>
                             <constraint firstItem="1Iw-AX-FSm" firstAttribute="centerY" secondItem="tjp-qH-Pfe" secondAttribute="centerY" id="Scx-CU-dnX"/>
@@ -227,6 +226,7 @@
                             <constraint firstItem="d9B-1o-l5h" firstAttribute="centerX" secondItem="jM3-eA-ISG" secondAttribute="centerX" constant="-0.5" id="fjP-CA-PnC"/>
                             <constraint firstItem="d9B-1o-l5h" firstAttribute="leading" secondItem="F3J-og-PZb" secondAttribute="trailing" constant="22" id="gKn-Oh-hEq"/>
                             <constraint firstItem="lX6-Gd-npD" firstAttribute="trailing" secondItem="BmM-G4-NzV" secondAttribute="trailingMargin" id="gTk-RE-iT0"/>
+                            <constraint firstItem="0eJ-UL-Xer" firstAttribute="centerX" secondItem="5VJ-ze-pTE" secondAttribute="centerX" constant="4" id="gf5-Xa-7Np"/>
                             <constraint firstItem="tjp-qH-Pfe" firstAttribute="top" secondItem="xRy-Ea-Y8C" secondAttribute="bottom" constant="49" id="hQa-R6-OH7"/>
                             <constraint firstItem="jM3-eA-ISG" firstAttribute="centerY" secondItem="XBx-q6-4oM" secondAttribute="centerY" constant="-0.5" id="hpD-Rt-FxU"/>
                             <constraint firstItem="TLD-Hk-ysn" firstAttribute="centerY" secondItem="0cc-MI-MpS" secondAttribute="centerY" id="jT6-yA-65c"/>
@@ -236,7 +236,6 @@
                             <constraint firstItem="TLD-Hk-ysn" firstAttribute="leading" secondItem="0cc-MI-MpS" secondAttribute="trailing" constant="18" id="lvN-pe-67y"/>
                             <constraint firstItem="h6M-1J-nH6" firstAttribute="leading" secondItem="034-NV-S3O" secondAttribute="trailing" constant="26" id="mRk-Ml-Fld"/>
                             <constraint firstItem="d9B-1o-l5h" firstAttribute="top" secondItem="jM3-eA-ISG" secondAttribute="bottom" constant="28" id="mmR-rW-81k"/>
-                            <constraint firstItem="5VJ-ze-pTE" firstAttribute="top" secondItem="4VM-lB-l0S" secondAttribute="bottom" id="mva-Mk-iGr"/>
                             <constraint firstItem="tjp-qH-Pfe" firstAttribute="leading" secondItem="TLD-Hk-ysn" secondAttribute="trailing" constant="18" id="nhT-iX-pDO"/>
                             <constraint firstItem="TLD-Hk-ysn" firstAttribute="centerY" secondItem="tjp-qH-Pfe" secondAttribute="centerY" id="o0f-EP-Ile"/>
                             <constraint firstItem="1Iw-AX-FSm" firstAttribute="leading" secondItem="tjp-qH-Pfe" secondAttribute="trailing" constant="18" id="qcH-zj-imP"/>
@@ -252,11 +251,13 @@
                                 <exclude reference="Ckh-nN-mbW"/>
                                 <exclude reference="GZr-fO-cR9"/>
                                 <exclude reference="59P-gL-USq"/>
+                                <exclude reference="Z3o-Hs-hpO"/>
                                 <exclude reference="u3V-b7-HNx"/>
                                 <exclude reference="hpD-Rt-FxU"/>
                                 <exclude reference="7qH-sq-Noa"/>
                                 <exclude reference="gKn-Oh-hEq"/>
                                 <exclude reference="ltH-Dx-8h0"/>
+                                <exclude reference="3ZE-5c-IWw"/>
                             </mask>
                         </variation>
                     </view>
