--- a/TrailMix/Base.lproj/Main.storyboard
+++ b/TrailMix/Base.lproj/Main.storyboard
@@ -217,7 +217,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="farmersMarket" translatesAutoresizingMaskIntoConstraints="NO" id="oWP-zu-DEc">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="black" translatesAutoresizingMaskIntoConstraints="NO" id="oWP-zu-DEc">
                                 <rect key="frame" x="-7" y="-5" width="613" height="611"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
@@ -494,7 +494,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="farmersMarket" width="375" height="667"/>
+        <image name="black" width="414" height="736"/>
         <image name="whiteArrow" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
