--- a/TrailMix WatchKit App/Base.lproj/Interface.storyboard
+++ b/TrailMix WatchKit App/Base.lproj/Interface.storyboard
@@ -35,31 +35,27 @@
                         <button width="1" alignment="left" title="5 Minutes" id="FTd-KA-jtl">
                             <connections>
                                 <action selector="fiveMinuteButtonTapped" destination="bu5-br-Dw4" id="l6E-cb-1v7"/>
-                                <segue destination="3dW-e1-7AQ" kind="modal" identifier="5" id="5dG-Yy-NSc"/>
                             </connections>
                         </button>
                         <button width="1" alignment="left" title="10 Minutes" id="gFQ-DO-yyB">
                             <connections>
                                 <action selector="tenMinuteButtonTapped" destination="bu5-br-Dw4" id="QoY-uo-mbs"/>
-                                <segue destination="3dW-e1-7AQ" kind="modal" identifier="10" id="IrU-aN-o7t"/>
                             </connections>
                         </button>
                         <button width="1" alignment="left" title="20 Minutes" id="ZhF-DP-SKg">
                             <connections>
                                 <action selector="twentyMinuteButtonTapped" destination="bu5-br-Dw4" id="AKg-tU-zsm"/>
-                                <segue destination="3dW-e1-7AQ" kind="modal" identifier="20" id="pad-bW-IyQ"/>
                             </connections>
                         </button>
                         <button width="1" alignment="left" title="30 Minutes" id="11w-5M-VET">
                             <connections>
                                 <action selector="thirtyMinuteButtonTapped" destination="bu5-br-Dw4" id="5oI-34-1HS"/>
-                                <segue destination="3dW-e1-7AQ" kind="modal" identifier="30" id="yhX-Uo-Wlk"/>
                             </connections>
                         </button>
                     </items>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="300" y="229.25"/>
+            <point key="canvasLocation" x="320" y="230.25"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -77,14 +73,15 @@
             </objects>
             <point key="canvasLocation" x="213" y="815"/>
         </scene>
-        <!--Navi Interface Controller-->
+        <!--WKNaviInterfaceController-->
         <scene sceneID="Rik-nD-VsI">
             <objects>
-                <controller id="3dW-e1-7AQ" customClass="WKNaviInterfaceController">
+                <controller identifier="WKNaviInterfaceController" id="3dW-e1-7AQ" customClass="WKNaviInterfaceController">
                     <items>
                         <label alignment="center" verticalAlignment="center" text="Remaining" id="AZC-rG-iOx"/>
                         <label alignment="center" verticalAlignment="center" text="Label" id="jjh-tC-3P3"/>
                         <label height="23.5" alignment="center" verticalAlignment="center" text="Meters" id="t9E-MW-UsJ"/>
+                        <label alignment="center" verticalAlignment="bottom" text="Label" id="f8N-3l-93V"/>
                     </items>
                     <connections>
                         <outlet property="distanceLabel" destination="jjh-tC-3P3" id="Wvr-Zy-vi0"/>
@@ -101,7 +98,4 @@
             <point key="canvasLocation" x="461" y="815"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="yhX-Uo-Wlk"/>
-    </inferredMetricsTieBreakers>
 </document>
